# ControlAccesos

./: .gitignore  access_manager_backup.sql  control-accesos.env.backup  diff-2026-07-05_09-15-16.txt  diff-2026-07-11_08-50-24.txt  diff-2026-07-11_09-57-20.txt  diff-2026-07-18_22-23-12.txt  diff-2026-07-18_22-56-39.txt  diff-2026-07-19_17-38-22.txt  diff-2026-07-19_19-07-40.txt  diff-2026-07-19_23-28-05.txt  subir_droplet.bat  subir_droplet.ps1  subir_git.bat
access-manager/backend/: Containerfile  alembic.ini  pyproject.toml
access-manager/backend/alembic/: env.py
access-manager/backend/alembic/versions/: 202606080001_initial_schema.py  202606080002_operational_layer.py  202606090001_display_turns.py  202606090002_operational_flow_v01.py  202606090003_institution_patient_contacts.py  202606100001_admin_ui_enhancements.py  202606100002_clusters_turnos.py  202606120001_patient_kiosks.py  202607050001_patient_confidential_name.py  202607050002_turn_templates_and_call_limits.py  202607110001_force_password_change.py  202607190001_demo_patient_birthdate.py
access-manager/backend/app/: __init__.py  constants.py  main.py
access-manager/backend/app/api/: auth.py  complejos.py  contactos.py  display.py  flow.py  health.py  instituciones.py  kiosks.py  operational.py  router.py
access-manager/backend/app/core/: config.py  database.py  logging.py  security.py
access-manager/backend/app/models/: __init__.py  auditoria.py  base.py  complejo.py  contacto.py  display.py  flow.py  institucion.py  kiosk.py  usuario.py  (+1 more)
access-manager/backend/tests/: test_operational_api.py
(+90 files in other folders)
