[project]
name = "access-manager-backend"
version = "0.2.0"
description = "Backend API for Access Manager."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "argon2-cffi>=23.1.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "redis>=5.0.8",
  "SQLAlchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
